Fixed flickering in header and main

--- a/app/styles/public/_header.scss
+++ b/app/styles/public/_header.scss
@@ -7,6 +7,8 @@
 // -------------------------
 
 header {
+  transform: translate3d(0, 0, 0);
+
   #logo-container {
     margin-bottom: 36px;
   }
